tests/reference/asr_preprocess-cpp8-edc2b52.stderr
C preprocessor error: Unterminated #ifdef
 --> tests/errors/cpp8.f90:3:1
  |
3 | #ifdef SOMETHING
  | ^ 
